[package]
name = "discord_interaction"
version = "0.0.2"
edition = "2021"
license = "GPL-3.0-only"
description = "A high-level library for using Discord's interactions model. Suitable for AWS Lambda."
repository = "https://github.com/tarinyoom/discord-interaction"
readme = "README.md"
categories = ["gui", "web-programming"]
keywords = ["discord", "serverless", "aws"]
exclude = [
  "**/.*"
]

[dependencies]
serde = { version = "=1.0.171", features = ["derive"] }
serde_repr = "0.1.16"

