[package]
name = "discord_interaction"
version = "0.0.3"
edition = "2021"
license = "GPL-3.0-only"
description = "A high-level library for using Discord's interactions model. Suitable for AWS Lambda."
repository = "https://github.com/tarinyoom/discord-interaction"
readme = "README.md"
categories = ["gui", "web-programming"]
keywords = ["discord", "serverless", "aws"]
exclude = [
  "**/.*"
]

[dependencies]
ed25519-dalek = "2.0.0"
hex = "0.4.3"
lambda_http = "0.8.1"
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.16"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
